# cookie-component

./: README.md  app.py  pyproject.toml
cookie_component/: __init__.py  index.html  index.js
tests/: test_component.py
