[tool.poetry]
name = "cookie-controller"
version = "0.1.0"
description = ""
authors = ["Dimple Mathew <36413448+dimplemathewkc@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.39.0"
pytest = "^8.3.3"


[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
